nuevo componente/modulo css, comienzo de utilizacion propiedad css grid

--- a/OneDrive/Escritorio/portafolio/pagina pelis/my-app/src/movieCard.module.css
+++ b/OneDrive/Escritorio/portafolio/pagina pelis/my-app/src/movieCard.module.css
@@ -1,3 +1,8 @@
 .movieCard{
-    color: red;
+    list-style: none;
+    font-size: 1.5rem;
+}
+.movieImage{
+    border-radius:10px;
+    background-color:azure;
 }
