utilizando grid se hizo responsive el cuadro que contiene las imagenes de las peliculas y el titulo de la misma

--- a/OneDrive/Escritorio/portafolio/pagina pelis/my-app/src/movieCard.module.css
+++ b/OneDrive/Escritorio/portafolio/pagina pelis/my-app/src/movieCard.module.css
@@ -3,6 +3,8 @@
     font-size: 1.5rem;
 }
 .movieImage{
+    width: 230px;
+    height: 345px;
     border-radius:10px;
     background-color:azure;
 }
