--- a/OneDrive/Escritorio/portafolio/pagina pelis/my-app/src/movieCard.module.css
+++ b/OneDrive/Escritorio/portafolio/pagina pelis/my-app/src/movieCard.module.css
@@ -1,10 +1,20 @@
 .movieCard{
     list-style: none;
     font-size: 1.5rem;
+    text-align: center;
 }
 .movieImage{
     width: 230px;
     height: 345px;
     border-radius:10px;
     background-color:azure;
+}
+
+@media (max-width: 560px){
+    .movieImage{
+        width: 90%;
+        height: auto;
+        
+    }
+    
 }
