Avanze router(Mostrar segun el link que tengamos como / , /movie , /movie/info ) utilizando react-router-dom

--- a/OneDrive/Escritorio/portafolio/pagina pelis/my-app/src/index.css
+++ b/OneDrive/Escritorio/portafolio/pagina pelis/my-app/src/index.css
@@ -1,6 +1,7 @@
 *{
     padding:0px;
     margin:0px;
+    background-color: rgb(6, 39, 39);
 }
 .ContenedorTituloP{
     background-color: rgb(6, 39, 39);
