--- a/OneDrive/Escritorio/portafolio/pagina pelis/my-app/src/index.css
+++ b/OneDrive/Escritorio/portafolio/pagina pelis/my-app/src/index.css
@@ -6,3 +6,8 @@
 .ContenedorTituloP{
     background-color: rgb(6, 39, 39);
 }
+a{
+    text-decoration: none;/*Para que todos los links(etiqueta a) de react
+    no contengan un subrayado obligatoriamente*/
+    
+}
