--- a/OneDrive/Escritorio/portafolio/pagina pelis/my-app/src/components/movieCard.module.css
+++ b/OneDrive/Escritorio/portafolio/pagina pelis/my-app/src/components/movieCard.module.css
@@ -9,7 +9,14 @@
     border-radius:10px;
     background-color:azure;
 }
-
+.movieCard:hover{
+    opacity:0.8;
+}
+.movieImage:hover{
+    border-radius: 50px;
+    width: 245px;
+    height: 365px;
+}
 @media (max-width: 560px){
     .movieImage{
         width: 90%;
