--- a/pagina pelis/my-app/src/pages/movieDetails.module.css
+++ b/pagina pelis/my-app/src/pages/movieDetails.module.css
@@ -1,3 +1,21 @@
 .detailsContainer{
-    
+    display:flex;
+    justify-content: center;
+}
+.column{
+    max-width: 400px;
+    margin: 15px;
+    height: auto;
+    height: 80%;
+}
+
+.movieImage{
+    border-radius: 15px;
+}
+
+.movieDetails{
+    font-size: 1.5rem;
+}
+.padding2parrafos{
+    padding-bottom: 5px;
 }
