--- a/pagina pelis/my-app/src/components/search.module.css
+++ b/pagina pelis/my-app/src/components/search.module.css
@@ -6,6 +6,7 @@
     position: relative
 }
 .searchButton{
+    
     position: absolute;
     right: 0;
     top:0;
@@ -17,11 +18,19 @@
 
 }
 .searchInput{
+    font-size:1.2rem;
     height: 25px;
     background-color: aliceblue;
     border-radius: 12px;
 
     padding:5px 30px 5px 10px;
+    border:1px solid black;
+}
+.searchInput:focus,
+.searchButton:focus{
+    outline:none;
+    border: 1px solid #f88ec2;
+    box-shadow: 0 0 5px #ebbed4;
 }
 .fondoNo{
     background: none;
